--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,39 @@
 #profile{
-  background-image: url(https://twitter.com/Kate_developer/photo);
+  // border-radius: 50%;
+  width: 60%;
+  box-shadow: 5px 10px #ff66c4;
+}
+
+.hero-body {
+  // background: black;
+  // background-image: url('/src/images/hero.png');
+  background-image:
+    linear-gradient(#3a3a3a, #c4c4c4),
+    url('/src/images/hero.png');
+}
+
+.button.is-rounded {
+  background: black;
+  color: white;
+}
+
+.keyword {
+  color: #ff66c4;
+}
+
+#About, #skills {
+  background: black;
+  font-size: 1.5em;
+}
+
+#contact {
+  background: black;
+}
+
+.gradient {
+  background: linear-gradient(#ff66c4, #5271ff);
+}
+
+.form {
+  background: white;
 }
