--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,11 +4,15 @@
   box-shadow: 5px 10px #ff66c4;
 }
 
+.title, .subtitle {
+  color: white;
+}
+
 .hero-body {
-  // background: black;
+  background: black;
   // background-image: url('/src/images/hero.png');
   background-image:
-    linear-gradient(#3a3a3a, #c4c4c4),
+    // linear-gradient(#3a3a3a, #c4c4c4),
     url('/src/images/hero.png');
 }
 
@@ -21,9 +25,10 @@
   color: #ff66c4;
 }
 
-#About, #skills {
+#About, #skills, #projects {
   background: black;
   font-size: 1.5em;
+  margin-bottom: 0;
 }
 
 #contact {
