projects section without svg

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -42,3 +42,12 @@
 .form {
   background: white;
 }
+
+.dreamlandMobile {
+  height: 450px;
+}
+
+.appImage {
+  display: flex;
+  justify-content: center;
+}
