--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,29 +1,47 @@
+
+//! General
+.title, .subtitle {
+  color: white;
+}
+
+//!Home 
+.button {
+  background: transparent;
+  color: white;
+
+}
+
+.hero-body {
+  background: black;
+  background-image: url('/images/waves.png');
+  // background-image:
+  //   // linear-gradient(#3a3a3a, #c4c4c4),
+  //   url('/src/images/hero.png');
+}
+#heroTitle{
+  font-size: 4rem;
+}
+
+#heroSubtitle {
+  font-size: 2rem;
+}
+
+.button:hover{
+  color: white;
+}
+
+//! About
 #profile{
   // border-radius: 50%;
   width: 60%;
   box-shadow: 5px 10px #ff66c4;
 }
 
-.title, .subtitle {
-  color: white;
-}
-
-.hero-body {
-  background: black;
-  // background-image: url('/src/images/hero.png');
-  background-image:
-    // linear-gradient(#3a3a3a, #c4c4c4),
-    url('/src/images/hero.png');
-}
-
-.button.is-rounded {
-  background: black;
-  color: white;
-}
-
 .keyword {
   color: #ff66c4;
 }
+
+//!Projects
 
 #About, #skills, #projects {
   background: black;
@@ -31,6 +49,16 @@
   margin-bottom: 0;
 }
 
+.dreamlandMobile {
+  height: 450px;
+}
+
+.appImage {
+  display: flex;
+  justify-content: center;
+}
+
+//!Contact
 #contact {
   background: black;
 }
@@ -43,30 +71,45 @@
   background: white;
 }
 
-.dreamlandMobile {
-  height: 450px;
-}
-
-.appImage {
-  display: flex;
-  justify-content: center;
-}
+//! Navbar 
 
 .navbar-item {
   color: white;
+  background: #0a0a0a;
+  text-transform: uppercase;
+  border: white solid 3px;
+  letter-spacing: 0.5em;
+  font-family: 'Montserrat', sans-serif;
 }
 
-#navItemAbout:focus {
+#navItemAbout:focus, #navItemAbout:hover {
   color: #fff066;
   background: #0a0a0a;
 }
 
-#navItemHello:focus {
+#navItemHello:focus, #navItemHello:hover {
   color: #5271ff;
   background: #0a0a0a;
 }
 
-#navItemWork:focus {
+#navItemWork:focus, #navItemWork:hover{
   color: #ff66c4;
   background: #0a0a0a;
+}
+
+#navItemHome:focus, #navItemHome:hover, #navItemHome {
+  background: #0a0a0a;
+  border: 0;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+//! Footer
+.footer {
+  background: black;
 }
