--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,7 +13,7 @@
 
 .hero-body {
   background: black;
-  background-image: url('/images/waves.png');
+  background-image: url('https://github.com/kate1562/portfolio/blob/8c4cf89c86270b5e28c3fc8830b55d9d421a638f/waves.png?raw=true');
   // background-image:
   //   // linear-gradient(#3a3a3a, #c4c4c4),
   //   url('/src/images/hero.png');
