--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,10 @@
   color: white;
 }
 
+.footer, #interests {
+  background: black;
+}
+
 //!Home 
 .button {
   background: transparent;
@@ -38,9 +42,37 @@
   color: #ff66c4;
 }
 
+.profileImgContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+//! Interests
+// .card{
+//   background: red;
+// }
+
+#musicImg, #foodImg, #yogaImg {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQg7Et9lCwvZ2beKB-jZhnygbjJHzPwJmC40A&usqp=CAU");
+  background-image: cover;
+  // width: 300px;
+}
+
+.interestsContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.card {
+  width:300px;
+}
+
 //!Projects
 
-#About, #skills, #projects {
+#about, #skills, #projects {
   background: black;
   font-size: 1.5em;
   margin-bottom: 0;
@@ -119,7 +151,5 @@
   padding: 15px;
 }
 
+
 //! Footer
-.footer {
-  background: black;
-}
