--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -160,9 +160,9 @@
   // fill:red;
 }
 
-.color:hover {
-  fill: rgb(255, 3, 218);
-}
+// .color:hover {
+//   fill: rgb(255, 3, 218);
+// }
 
 .iconLabel{
   position: absolute;
