--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -148,21 +148,20 @@
   width: 4.5rem;
 }
 
+.icon:hover {
+  filter: brightness(0.2);
+}
+
+.icon:hover ~ .iconLabel {
+  opacity: 1;
+  font-weight: bold;
+}
+
 .iconWrapper{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-#skills .color {
-  fill: rgb(255, 242, 3);
-  // background:red;
-  // fill:red;
-}
-
-// .color:hover {
-//   fill: rgb(255, 3, 218);
-// }
 
 .iconLabel{
   position: absolute;
