--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -84,7 +84,7 @@ body {
 //!Projects
 
 .dreamlandMobile {
-  height: 450px;
+  height: 550px;
 }
 
 // .appImage {
@@ -92,14 +92,51 @@ body {
 //   justify-content: center;
 // }
 
-#dreamland{
+#dreamland, #hackasnack, #insbaration, #frogger{
   background-color: white;
+  border-radius: 25px;
+  margin:40px;
+  padding: 50px;
 }
 
 .projectRule{
   border-top: dotted #cd89fd;
   width: 50%
+}
 
+.projectSpiel{
+  font-size: 1em;
+  margin-right: 20px;
+}
+
+.hackasnackMac, .insbaration {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  justify-items: center;
+}
+
+.froggerImg{
+  display: flex;
+  justify-content: center;
+}
+
+.projectTitle{
+  color: grey;
+  font-weight: bold;
+}
+
+.projectLink{
+  color:#cd89fd;
+  margin-right: 20px;
+  font-size: 2em;
+}
+
+.linkLabel{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 0.75em;
 }
 
 //!Contact
@@ -108,7 +145,7 @@ body {
 // }
 
 .gradient {
-  background: linear-gradient(#ff66c4, #5271ff);
+  background-image: url('');
   padding: 30px;
 }
 
@@ -126,6 +163,10 @@ body {
 
 .contactIcon {
   width: 20%;
+}
+
+.contactImg{
+  background-image: url('../images/contactImg.png');
 }
 
 //! Navbar 
@@ -159,7 +200,7 @@ a.navbar-item:focus, a.navbar-item:hover {
 //! Skills
 
 .icon{
-  color: #614178;
+  color: #6604aa;
   width: 3em;
   height: 3em;
 }
@@ -196,3 +237,8 @@ a.navbar-item:focus, a.navbar-item:hover {
 
 
 //! Footer
+
+.footer {
+  // color: white;
+  background-color: transparent;
+}
